# Clang-Complier-Frontend

./: Alegreya.sty  AlegreyaSans.sty  Makefile  README.md  back.tex  clangbook.bib  clangbook.tex  clangbooklog.txt  front.tex  preface.tex
Images/: Packt_logo-grey.eps
part1/: arch.tex  ast.tex  baselibs.tex  main.tex  setup.tex
part2/: Makefile  clangtidy.tex  codeanalysis.tex  idesupport.tex  main.tex  refactor.tex
part3/: features.tex  largeprojects.tex  main.tex
src/: .clang-format  Makefile
src/part1/ch3_ast/astdumper/: AstDumper.cpp  CMakeLists.txt  Consumer.hpp  FrontendAction.hpp  Visitor.hpp
src/part1/ch3_ast/declvisitor/: FrontendAction.hpp
src/part1/ch3_ast/recursivevisitor/: FrontendAction.hpp
src/part1/ch4_baselibs/recursivevisitor/: FrontendAction.hpp
src/part1/project/: CMakeLists.txt  Project.cpp
src/part1/testproject/: CMakeLists.txt  build.sh
src/simple/: Makefile  fib.cpp  trivial.cpp
